--- a/client/public/index.html
+++ b/client/public/index.html
@@ -38,6 +38,15 @@
     <main>
       <noscript>You need to enable JavaScript to run this app.</noscript>
       <div id="root"></div>
+      <script>
+        if ("serviceWorker" in navigator) {
+          window.addEventListener("load", () => {
+            navigator.serviceWorker.register("service-worker.js").then(reg => {
+              console.log("We found your service worker file!", reg);
+            });
+          });
+        }
+      </script>
     </main>
     <!--
       This HTML file is a template.
